# complexity-lab

./: .gitattributes  .gitignore  DATA_TRUTH.md  LICENSE  README.md  _quarto.yml  index.qmd  pyproject.toml  render.yaml
.streamlit/: config.toml
app/: Home.py  common.py
docs/: blueprint.md  data-dictionary.md  lab-guide.md  personal-lab-rebuild-plan.md  reading-list.md  reference-data.md  reference-source-roadmap.md  refresh-runbook.md  research-questions.md
experiments/: 001-descriptive-baseline.qmd  002-ev-diffusion-states.qmd  003-oem-state-network.qmd  004-wholesale-retail-nowcast.qmd  005-phase-transitions.qmd  006-ev-threshold.qmd  007-ev-contagion.qmd  008-fuel-regimes.qmd  009-adoption-network-horserace.qmd  010-shev-isolation.qmd  011-regime-survival.qmd  012-suv-transition.qmd  013-shev-counterfactual.qmd  _template.qmd  guide.qmd  index.qmd
notes/: reading-list.md
scripts/: check_fuel_map.py  check_ws_break.py  compile_state_fuel_prices.py  convert_rbi_gsdp.py  convert_rbi_nsdp.py  convert_rbi_state_series.py  generate_annual_population.py  generate_derived_references.py  normalize_sparse_references.py  profile_wholesale.py  validate_numbers.py
tests/: test_analysis.py  test_app_common.py  test_app_data_access.py  test_app_smoke.py  test_app_state.py  test_consistency.py  test_contagion.py  test_data_layer.py  test_experiment_data_contract.py  test_experiment_publishing.py  test_forecast.py  test_inference.py  test_networks.py  test_persistence.py  test_reference_data.py  test_regimes.py  test_segments.py  test_shocks.py  test_simulation.py  (+3 more)
(+110 files in other folders)
