[project]
name = "complexity-lab"
version = "0.1.0"
description = "A research lab for India's passenger-vehicle market: descriptive statistics, econometrics, network science, complexity measures and simulation on VAHAN registration data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kapil" }]
dependencies = [
    "duckdb>=1.1",
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "networkx>=3.4",
    "powerlaw>=1.5",
    "ruptures>=1.1.9",
    "plotly>=5.24",
    "streamlit>=1.40",
    "pydantic-settings>=2.6",
    "pyarrow>=18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "nbformat>=5.10",
]

[project.scripts]
lab = "complexity_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/complexity_lab"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
